fixed the css so that the text would have a gap between the image

--- a/assets/css/publishthis.general.css
+++ b/assets/css/publishthis.general.css
@@ -97,8 +97,8 @@ p.pt-spacer {
 .pt-annotation-title-v-bottom { vertical-align: bottom; }
 
 .aligncenter { text-align: center; margin: auto; margin-left: auto; display: block; }
-.alignright { text-align: right; margin: auto; margin-left: auto; float: right;}
-.alignleft { text-align: left; margin: auto; margin-left: auto; float: left; }
+.alignright { text-align: right; float: right;}
+.alignleft { text-align: left; float: left; }
 
 .pt-spacer img { border: none; width: 1px; height: 1px; }
 .clear { clear:both; }
